--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,25 @@
 	<title></title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
 	<meta name="author" content="kmu">
-	<link rel="stylesheet" type="text/css" href="css/myCSS.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/bootstrap/v3.1.1/css/bootstrap.min.css">
 </head>
 <body>
-	<div id="main">
-		<header></header>
-		<nav></nav>
-		<section>
-			<!-- Your content goes here} -->
-		</section>
-		<article></article>
-		<footer></footer>
-	</div>
-	<script type="text/javascript" src="js/myJS.js"></script>
+	<header></header>
+	<nav></nav>
+	<section class="container">
+		<!-- Your content goes here -->
+	</section>
+	<article></article>
+	<footer></footer>
+
+	<!-- jQuery --> <script type="text/javascript" src="../vendor/jquery/v2.1.1/jquery.min.js"></script>
+	<!-- Bootstrap --> <script type="text/javascript" src="../vendor/bootstrap/v3.1.1/js/bootstrap.min.js"></script>
+	<!-- Angular --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular.min.js"></script>
+	<!-- Angular Route --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular-route.min.js"></script>
+	<!-- Angular Mocks --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular-mocks.js"></script>
+	<!-- LiveReload --> <script src="//localhost:35729/livereload.js"></script>
+
+	<!-- Algorithm --> <script type="text/javascript" src="breadthFirst/algorithm/breadthFirst.js"></script>
 </body>
 </html>
