reorganized folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<header></header>
 	<nav></nav>
 	<section class="container">
-		<!-- Your content goes here -->
+	<div data-ng-view=""></div>
 	</section>
 	<article></article>
 	<footer></footer>
@@ -21,8 +21,11 @@
 	<!-- Angular --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular.min.js"></script>
 	<!-- Angular Route --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular-route.min.js"></script>
 	<!-- Angular Mocks --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular-mocks.js"></script>
-	<!-- LiveReload --> <script src="//localhost:35729/livereload.js"></script>
 
-	<!-- Algorithm --> <script type="text/javascript" src="breadthFirst/algorithm/breadthFirst.js"></script>
+	<!-- Breadth First Module --> <script type="text/javascript" src="breadthFirst/module.js"></script>
+	<!-- Routes --> <script type="text/javascript" src="breadthFirst/routes.js"></script>
+	<!-- Algorithm --> <script type="text/javascript" src="breadthFirst/algorithm.js"></script>
+
+	<!-- LiveReload --> <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
