--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,12 @@
 	<!-- Angular --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular.min.js"></script>
 	<!-- Angular Route --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular-route.min.js"></script>
 	<!-- Angular Mocks --> <script type="text/javascript" src="../vendor/angular/v1.2.15/angular-mocks.js"></script>
+	<!-- Jasmine --> <script type="text/javascript" src="../vendor/jasmine/v2.0.0/jasmine.js"></script>
 
 	<!-- Breadth First Module --> <script type="text/javascript" src="breadthFirst/module.js"></script>
 	<!-- Routes --> <script type="text/javascript" src="breadthFirst/routes.js"></script>
 	<!-- Algorithm --> <script type="text/javascript" src="breadthFirst/algorithm.js"></script>
 
-	<!-- LiveReload --> <script src="//localhost:35729/livereload.js"></script>
+	<!-- LiveReload --> <!-- <script src="//localhost:35729/livereload.js"></script> -->
 </body>
 </html>
